--- a/.harness/StepRemo5_v1.yaml
+++ b/.harness/StepRemo5_v1.yaml
@@ -7,7 +7,7 @@ template:
   orgIdentifier: Simlified_Git_sync
   tags: {}
   spec:
-    timeout: 10m
+    timeout: <+input>
     type: ShellScript
     spec:
       shell: Bash
@@ -16,6 +16,6 @@ template:
       source:
         type: Inline
         spec:
-          script: echo "hello"
+          script: <+input>
       environmentVariables: []
       outputVariables: []
