Update template PipelineRemote

--- a/.harness/PipelineRemote_v12.yaml
+++ b/.harness/PipelineRemote_v12.yaml
@@ -22,4 +22,12 @@ template:
                     template:
                       templateRef: StepRemo5
                       versionLabel: v1
+                      templateInputs:
+                        type: ShellScript
+                        timeout: <+input>
+                        spec:
+                          source:
+                            type: Inline
+                            spec:
+                              script: <+input>
           tags: {}
