Update template shellScript19Sept

--- a/.harness/shellScript19Sept_1.yaml
+++ b/.harness/shellScript19Sept_1.yaml
@@ -16,7 +16,7 @@ template:
       source:
         type: Inline
         spec:
-          script: echo 'hi'
+          script: <+input>
       environmentVariables: []
       outputVariables:
         - name: var1
