--- a/.harness/stage05Nov_v1.0.0.yaml
+++ b/.harness/stage05Nov_v1.0.0.yaml
@@ -13,7 +13,7 @@ template:
       environment:
         environmentRef: <+input>
         deployToAll: false
-        environmentInputs: <+input>
+        environmentInputs: <+input>.default(abc)
         serviceOverrideInputs: <+input>
         infrastructureDefinitions: <+input>
       service:
