--- a/.harness/remotePipelineTemplate05Nov.yaml
+++ b/.harness/remotePipelineTemplate05Nov.yaml
@@ -25,6 +25,9 @@ pipeline:
                   - name: var1
                     type: String
                     value: <+input>
+                  - name: var3
+                    type: String
+                    value: <+input>
                   - name: var2
                     type: String
                     value: <+input>
